cd/backend-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-https
  labels:
    app: https
spec:
  replicas: 2 # 초기 가용성 확보를 위해 2개로 시작 권장
  selector:
    matchLabels:
      app: https
  template:
    metadata:
      labels:
        app: https
    spec:
      containers:
        - name: container
          image: wngud1/hoeng:main-47960dddce0618ffd7271bbb5b158f7059019100
          ports:
            - containerPort: 8080
            - containerPort: 8081
          # [SER7 64GB 최적화 리소스 설정]
          resources:
            requests:
              cpu: "500m" # HPA 기준점 (0.5코어)
              memory: "2Gi" # JVM 최소 힙 공간 확보
            limits:
              cpu: "1000m" # 부하 시 최대 1코어까지 허용
              memory: "2Gi" # OOM 방지를 위한 상한선
      terminationGracePeriodSeconds: 30
