cd/front-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vue-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vue-frontend
  template:
    metadata:
      labels:
        app: vue-frontend
    spec:
      containers:
        - name: vue
          image: wngud1/vue-frontend:main-28c8baf8ea17e869f6108a22aedfa1e8e864aa20
          ports:
            - containerPort: 80
