cd/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-https
  labels:
    app: https
    release: kube-prometheus-stack
spec:
  selector:
    app: https
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: metrics # <--- 이 이름이 ServiceMonitor에서 사용
      port: 8081
      targetPort: 8081
