cd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: esboard
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "30m"
#    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
#    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # [중요] Snippet 대신 표준 어노테이션으로 세션 정보 전달
    nginx.ingress.kubernetes.io/proxy-set-headers: "X-Forwarded-For=$proxy_add_x_forwarded_for,X-Forwarded-Proto=$scheme"
spec:
  ingressClassName: nginx
  rules:
    - host: workly.info
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: svc-https
                port:
                  number: 8080

          # 2. OG 태그용 포스트 (백엔드)
          - path: /post
            pathType: Prefix
            backend:
              service:
                name: svc-https
                port:
                  number: 8080

          # 3. 그 외 모든 요청 (프론트: /assets 포함)
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vue-service
                port:
                  number: 80
  tls:
    - hosts:
        - workly.info
      secretName: workly-info-tls
